changed the website url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://shadow092.github.io/ourAI",
+  "homepage": "https://noNameInMind.github.io/ourAI",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
